---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 16.0
@main(v0: float) {
  c1_: float = const 0;
  v2_: bool = feq v0 c1_;
  br v2_ .b3_ .b4_;
.b3_:
  print c1_;
  ret;
  jmp .b5_;
.b4_:
  v6_: bool = feq v0 v0;
  c7_: bool = const false;
  v8_: float = id c1_;
  v9_: bool = id c7_;
  br v6_ .b10_ .b11_;
.b10_:
  v12_: bool = flt v0 c1_;
  v13_: float = id c1_;
  v14_: bool = id c7_;
  br v12_ .b15_ .b16_;
.b15_:
  v8_: float = id v13_;
  v9_: bool = id v14_;
  v17_: float = fdiv v8_ v8_;
  print v17_;
  ret;
  jmp .b5_;
.b16_:
  c18_: float = const 1;
  c19_: float = const 1.0000000001;
  c20_: float = const 0.9999999999;
  c21_: float = const 2;
  v22_: float = id c1_;
  v23_: float = id c18_;
  v24_: float = id c19_;
  v25_: float = id c20_;
  v26_: float = id c21_;
  v27_: float = id v0;
.b28_:
  v29_: float = fdiv v27_ v23_;
  v30_: float = fadd v23_ v29_;
  v31_: float = fdiv v30_ v26_;
  v32_: float = fdiv v31_ v23_;
  v33_: bool = fge v32_ v25_;
  v34_: bool = fle v32_ v24_;
  v35_: bool = and v33_ v34_;
  v36_: bool = not v35_;
  v37_: float = id v22_;
  v23_: float = id v31_;
  v38_: float = id v24_;
  v39_: float = id v25_;
  v40_: float = id v26_;
  v41_: float = id v27_;
  v22_: float = id v37_;
  v24_: float = id v38_;
  v25_: float = id v39_;
  v26_: float = id v40_;
  v27_: float = id v41_;
  br v36_ .b28_ .b42_;
.b42_:
  print v23_;
  c43_: bool = const true;
  v13_: float = id v22_;
  v14_: bool = id c43_;
  v8_: float = id v13_;
  v9_: bool = id v14_;
  ret;
  jmp .b5_;
.b11_:
  v17_: float = fdiv v8_ v8_;
  print v17_;
  ret;
.b5_:
}
